# lib-examples

./: .editorconfig  .gitignore  README.md  docker-compose.yml  lib_examples.sql  pom.xml
c/: .gitignore  README.md
c/csapp/: CMakeLists.txt
c/csapp/src/: byte_ordering.c
c/k-and-r/: CMakeLists.txt
c/k-and-r/src/: 2-1.c  2-10.c  2-3.c  2-4.c  3-1.c  4-1.c  4-12.c  4-13.c  4-2.c  5-10.c  5-13.c  5-15.c  5-3.c  5-4.c  5-6.c  5-8.c  6-2.c  6-3.c  6-4.c  6-6.c
c/posix/: CMakeLists.txt
c/posix/src/fileio/: cat_vimrc.c
c/posix/src/net_ipc/: ifconfig.c  nslookup.c
c/posix/src/stdio/: cat_passwd.c  cat_zshrc.c
c/the-c-programming-language/: 2-1.c  2-10.c  2-3.c  2-4.c  2-5.c  3-1.c  3-2.c  3-3.c  4-1.c  4-12.c  4-13.c  4-14.c  4-2.c  5-10.c  5-13.c  5-14.c  5-15.c  5-3.c  5-4.c  5-5.c  5-6.c  5-8.c  5-9.c  6-1.c  6-4.c  6-5.c  CMakeLists.txt
demo-elasticsearch/: analyze.http  index.http  mapping.http  search.http
demo-golang/: README.md  pom.xml
demo-golang/src/arrays/: sum_test.go
demo-golang/src/concurrency/: check_websites.go  check_websites_test.go
demo-golang/src/di/: di.go  di_test.go
demo-golang/src/hello/: hello.go  hello_test.go
demo-golang/src/hello-world/: hello.go
demo-golang/src/integers/: adder_test.go
demo-golang/src/iteration/: repeat.go  repeat_test.go
demo-golang/src/maps/: dictionary.go  dictionary_test.go  dictonary.go
demo-golang/src/mocking/: count_down.go
demo-golang/src/reflection/: reflection_test.go
demo-golang/src/select/: racer.go  racer_test.go
demo-golang/src/shapes/: shapes.go  shapes_test.go
demo-java-ast/: pom.xml
demo-python/: .gitignore  pom.xml
go/: README.md
go/lang/: closure_with_goroutine_test.go  defer_test.go  exec_test.go  for_with_goroutine_test.go  generic_test.go  go.mod  html_test.go  http_test.go  mutex_test.go  os_test.go  sync_test.go  text_test.go  time_test.go  value_test.go  zero_value_test.go
go/lang/time/: time_test.go
go/learn-go-with-tests/: go.mod
go/learn-go-with-tests/maps/: dictionary_test.go
go/learn-go-with-tests/mocking/: count_down_test.go
go/learn-go-with-tests/pointers/: wallet_test.go
go/learn-go-with-tests/structs/: shapes_test.go
go/x-net/: go.mod  go.sum  html_test.go  websocket_test.go
golang/: README.md
golang/lang/: go.mod
golang/learn-go-with-tests/: go.mod
golang/learn-go-with-tests/pointers/: wallet.go
golang/learn-go-with-tests/structs/: shapes.go
java/: README.md  pom.xml
java/algorithm/: pom.xml
java/apache/: pom.xml
java/database/: h2.md  pom.xml
java/design-pattern/: pom.xml
java/elasticsearch/: pom.xml
java/google/: pom.xml
java/lang/: pom.xml
java/netflix/: pom.xml
java/netty/: pom.xml
java/openjdk/: pom.xml
java/others/: pom.xml
java/spring/: pom.xml
java/spring/spring-framework/: pom.xml
javascript/: README.md
javascript/css/: animations.html  canvas.html  transform.html  transitions.html
javascript/css/layout/: css.css  flex.html  grid.html
javascript/lang/: package-lock.json  package.json
javascript/lang/src/: asynchronous.js  promise.js  sum.js
javascript/lang/tests/: array.test.js  asynchronous.test.js  promise.test.js  sum.test.js
javascript/web-api/: package-lock.json  package.json
javascript/web-apis/: .eslintrc.js  jest.config.js  package-lock.json  package.json
python/: README.md  pyproject.toml  requirements.txt
python/lang/: data_structure.py  oop.py  system.py
python/lang/tests/: test_calculate.py  test_controlflow.py  test_data_structure.py  test_datastructures.py  test_function.py  test_inoutput.py  test_oop.py
python/lib/: mysql.py  redis.py  request.py
python/practice/: practice_3.py  practice_6.py  practice_base_type.py  practice_file.py  practice_oop.py  practice_standard_lib.py
python/src/lang/: __init__.py  clazz.py  concurrent.py  fibo.py  oop.py  system.py
python/src/lib/: excel.py  mysql.py  pydantic.py  redis.py
python/src/python/practice/: practice_4.py
python/test/lang/: test_calculate.py  test_clazz.py  test_concurrent.py  test_controlflow.py  test_datastructures.py  test_function.py  test_inoutput.py  test_json.py  test_tqdm.py
python/test/lib/: test_numpy.py  test_open3d.py  test_opencv.py  test_pydantic.py
(+1002 files in other folders)
