cmake_minimum_required(VERSION 3.17)

# set the project name
project(the_c_programming_language)

# specify the C standard
set(CMAKE_C_STANDARD 99)

# add the executable
add_executable(2-1 2-1.c)
add_executable(2-3 2-3.c)
add_executable(2-4 2-4.c)
add_executable(2-5 2-5.c)
add_executable(2-10 2-10.c)
add_executable(3-1 3-1.c)
add_executable(3-2 3-2.c)
add_executable(3-3 3-3.c)
